Fix overflow

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -177,7 +177,7 @@ td {
     visibility: collapse;
   }
   table {
-    width: 350px;
+    width: 300px;
   }
 }
 
